--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "express": "^4.17.1",
+    "js-cookie": "^2.2.1",
     "randomstring": "^1.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
